--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "imagination-react-native": "^2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.1"
+    "react-native": "0.76.1",
+    "react-native-sensors": "^7.3.6",
+    "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
